# rust-rummy

./: .gitignore  Dockerfile  README.md  compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: app.py  rummy_wasm.py
backend/src/auth/: __init__.py  routes.py  user.py
backend/src/games/: __init__.py  controller.py  game.py  routes.py
frontend/: Dockerfile  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.tsx  api.js  api.ts  apiTypes.ts  index.js  index.tsx  rummy-wasm.js  rummy-wasm.ts
frontend/src/auth/: AuthForm.js  AuthForm.tsx  authFormFactory.js  index.js
frontend/src/game/: GameList.js  GameList.tsx  GameView.js  GameView.tsx  index.js  index.ts  index.tsx
rust/: Cargo.toml  Dockerfile  pyproject.toml
rust/.cargo/: config
rust/src/: gameplay.rs  lib.rs  parser.rs
