[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Michael T. Mordowanec <michael.mordowanec@gmail.com>"]
readme = "README.md"
packages = [
  { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
flask-cors = "^3.0.10"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
